# SFMLTrafficLIghter

./: CMakeLists.txt  Car.cpp  Car.h  Entity.cpp  Entity.h  GameState.cpp  GameState.h  LICENSE  Lighter.cpp  Lighter.h  README.md  State.cpp  State.h  World.cpp  WorldState.cpp  WorldState.h  main.cpp
Headers/: Car.h  World.h
Source/: Car.cpp  Lighter.cpp  World.cpp
